[+] Administration : recherche possible à partir de l'identifiant d'un article
[+] Administration : suppression fichier install.php à partir du message d'information
[+] Gestionnaire de médias : affichage des miniatures jpeg
[+] Gestionnaire de médias : copie lien image dans le presse-papier
[+] Suppression des doublons dans la saisie des tags des articles
[+] Gestion de la méthode onUpdate dans les plugins
[+] Tri des articles par ordre aléatoire configurable à partir de l'administration (Paramètres > Options d'affichage et Catégories)
[+] plxShow:templateCSS - Prise en compte des fichiers css minifiés si disponibles (contribution alexandre-lg)
[+] Réglage de l'affichage de l'indentation des commentaires sur smartphones (contribution kowalsky)
[+] Ajout du hook plxMotorRedir301 dans la classe plxMotor
[+] #69: plxAdmin:editArticle - ajout du hook plxAdminEditArticleEnd
[+] #177: Ajout de la protection du lien téléphone (contribution cfdev)
[+] #191: plxShow:catList - Ajout de la variable #cat_description
[+] #194: Rédaction d'un article: optimisation de l'ajout rapide de tag (contribution MatthieuQuantin)
BUG Non affichage du nombre de commentaires d'un article si les commentaires sont fermés
BUG plxUtils::removeAccents - amélioration de la prise en compte des caractères non latin
BUG Administration > Pages Statiques : lien Voir incomplet
BUG Administration : problème d'affichage du compteur des articles en attente de validation
BUG Administration : modification impossible de la date du commentaire à partir de l'icône calendrier
BUG Administration : Mise à jour auteur commentaire avec apostrophe/caractères spéciaux transformés en équivalent html
BUG Mauvais lien des commentaires dans les flux rss
BUG Gestionnaire de médias: mauvais affichage de l'extension d'un fichier si le fichier n'a pas d'extension
BUG Administration : conflit entre la langue par défaut du site et la langue du profil utilisateur
BUG #171: Décalage theme par défaut